[project]
name = "urlparser"
version = "3.1.0"
description = "通用 URL 资源解析器 - Python 包 + Claude Code Skill"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "KnowHow Team", email = "knowhow@example.com"}
]
keywords = ["url", "parser", "scraper", "transcriber", "knowledge-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "playwright>=1.40.0",
    "yt-dlp>=2024.1.0",
]

[project.optional-dependencies]
transcribe = [
    "funasr",
    "faster-whisper",
    "torch",
]
browser-use = [
    "browser-use",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
urlparser = "urlparser.cli:main"

[project.urls]
Homepage = "https://github.com/knowhow/urlparser"
Documentation = "https://github.com/knowhow/urlparser#readme"
Repository = "https://github.com/knowhow/urlparser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/urlparser"]
# Include Skill files as package_data
artifacts = ["src/urlparser/skill/**/*"]

[tool.hatch.build]
include = [
    "src/urlparser/**/*.py",
    "src/urlparser/skill/**/*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/urlparser"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]