[project]
name = "urlparser"
version = "3.3.1"
description = "通用 URL 资源解析器 - Python 包 + Claude Code Skill"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "KnowHow Team", email = "knowhow@example.com"}
]
keywords = ["url", "parser", "content-extractor", "transcriber", "knowledge-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "playwright>=1.40.0",
    "yt-dlp>=2024.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
transcribe = [
    "funasr",
    "faster-whisper",
    "torch",
    "httpx",
]
comprehension = [
    "openvino>=2024.0.0",
    "openvino-genai>=2024.0.0",
    "llama-cpp-python>=0.3.0",
    "pillow>=10.0.0",
    "psutil>=5.9.0",
]
images = [
    "pillow>=10.0.0",
    "requests>=2.30.0",
]
browser-use = [
    "browser-use",
]
curl-cffi = [
    "curl_cffi>=0.15.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
urlparser = "urlparser.cli:main"

[project.urls]
Homepage = "https://github.com/tyouter/urlparser"
Documentation = "https://github.com/tyouter/urlparser#readme"
Repository = "https://github.com/tyouter/urlparser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/urlparser"]

[tool.hatch.build]
include = [
    "src/urlparser/**/*.py",
    "skills/**/*.md",
    ".claude/skills/**/*.md",
    ".trae/skills/**/*.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = ["integration: marks tests as integration tests (need network/GPU, skip by default)"]

[tool.coverage.run]
source = ["src/urlparser"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]